modify mood emoji, finish mood setup

--- a/Journal/Journal/Application/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Application/Base.lproj/Main.storyboard
@@ -95,12 +95,12 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="s1z-Mw-sWD">
                                 <rect key="frame" x="8" y="96" width="398" height="758"/>
                                 <subviews>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="YYD-ag-6ft">
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="YYD-ag-6ft">
                                         <rect key="frame" x="0.0" y="0.0" width="398" height="32"/>
                                         <segments>
-                                            <segment title="☹"/>
+                                            <segment title="😢"/>
                                             <segment title="😐"/>
-                                            <segment title="🙂"/>
+                                            <segment title="😃"/>
                                         </segments>
                                     </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rhe-5S-LHH">
@@ -136,7 +136,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyView" destination="uBz-TF-BCC" id="TRc-M7-aVZ"/>
-                        <outlet property="moodControl" destination="YYD-ag-6ft" id="Yu3-P3-Bi6"/>
+                        <outlet property="moodSelector" destination="YYD-ag-6ft" id="Yu3-P3-Bi6"/>
                         <outlet property="titleField" destination="rhe-5S-LHH" id="Pce-8z-PcC"/>
                     </connections>
                 </viewController>
