--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -16,53 +16,68 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="57" id="p0q-za-SKV" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="57"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="103" id="p0q-za-SKV" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="103"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="p0q-za-SKV" id="PHZ-wr-NvI">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="57"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="103"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="OkM-LO-Xf5">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="57"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tCN-BG-mYN">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="OkM-LO-Xf5">
+                                            <rect key="frame" x="0.0" y="39" width="414" height="82.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="86" translatesAutoresizingMaskIntoConstraints="NO" id="0za-CY-gJn">
-                                                    <rect key="frame" x="0.0" y="0.0" width="270" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="20.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHG-I4-Vgr">
-                                                            <rect key="frame" x="0.0" y="0.0" width="92" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="164" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Stamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vxa-ej-ReD">
-                                                            <rect key="frame" x="178" y="0.0" width="92" height="20.5"/>
+                                                            <rect key="frame" x="250" y="0.0" width="164" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fte-a3-KJN">
-                                                    <rect key="frame" x="0.0" y="23.5" width="39.5" height="33.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fte-a3-KJN">
+                                                    <rect key="frame" x="0.0" y="23.5" width="39.5" height="59"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="0za-CY-gJn" secondAttribute="trailing" id="Q5C-c7-tfB"/>
+                                                <constraint firstItem="0za-CY-gJn" firstAttribute="top" secondItem="OkM-LO-Xf5" secondAttribute="top" id="kMQ-1z-0m0"/>
+                                                <constraint firstItem="0za-CY-gJn" firstAttribute="leading" secondItem="OkM-LO-Xf5" secondAttribute="leading" id="sV9-nK-3kL"/>
+                                            </constraints>
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="OkM-LO-Xf5" secondAttribute="bottom" id="5Og-5n-wMg"/>
-                                        <constraint firstItem="OkM-LO-Xf5" firstAttribute="top" secondItem="PHZ-wr-NvI" secondAttribute="top" id="HtI-Ko-ZaH"/>
-                                        <constraint firstItem="OkM-LO-Xf5" firstAttribute="leading" secondItem="PHZ-wr-NvI" secondAttribute="leading" id="Z7O-nI-Dbg"/>
-                                        <constraint firstAttribute="trailing" secondItem="OkM-LO-Xf5" secondAttribute="trailing" id="jYz-Va-9Zr"/>
+                                        <constraint firstItem="tCN-BG-mYN" firstAttribute="top" secondItem="PHZ-wr-NvI" secondAttribute="top" id="5Z3-vt-Xym"/>
+                                        <constraint firstAttribute="trailing" secondItem="tCN-BG-mYN" secondAttribute="trailing" id="QEt-tX-6sw"/>
+                                        <constraint firstAttribute="bottom" secondItem="OkM-LO-Xf5" secondAttribute="bottom" id="bwx-Jy-LOE"/>
+                                        <constraint firstItem="OkM-LO-Xf5" firstAttribute="leading" secondItem="PHZ-wr-NvI" secondAttribute="leading" id="kNF-7i-E1v"/>
+                                        <constraint firstItem="OkM-LO-Xf5" firstAttribute="top" secondItem="tCN-BG-mYN" secondAttribute="bottom" id="ltU-8k-3fj"/>
+                                        <constraint firstItem="tCN-BG-mYN" firstAttribute="leading" secondItem="PHZ-wr-NvI" secondAttribute="leading" id="nuS-Fs-QrB"/>
+                                        <constraint firstAttribute="trailing" secondItem="OkM-LO-Xf5" secondAttribute="trailing" id="sfo-IW-AYN"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="entryBodyLabel" destination="fte-a3-KJN" id="0hZ-ND-Lu8"/>
                                     <outlet property="entryTimeStampLabel" destination="Vxa-ej-ReD" id="ace-69-JC9"/>
                                     <outlet property="entryTitleLabel" destination="UHG-I4-Vgr" id="7Jn-j7-riE"/>
+                                    <outlet property="moodLabel" destination="tCN-BG-mYN" id="227-ud-Omb"/>
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="CellDetailSegue" id="qDR-tn-Og1"/>
                                 </connections>
                             </tableViewCell>
@@ -82,7 +97,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dx7-pg-2T4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-714" y="188"/>
+            <point key="canvasLocation" x="-714.49275362318849" y="187.5"/>
         </scene>
         <!--Entry Detail View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -92,13 +107,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lx8-95-byq">
-                                <rect key="frame" x="10" y="98" width="394" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Lxg-nA-Qpm">
+                                <rect key="frame" x="20" y="108" width="374" height="73"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="BNv-Zv-00S">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😃"/>
+                                            <segment title="🤬"/>
+                                            <segment title="☹️"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lx8-95-byq">
+                                        <rect key="frame" x="0.0" y="39" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="PpR-v3-cV9">
-                                <rect key="frame" x="10" y="142" width="394" height="288"/>
+                                <rect key="frame" x="10" y="191" width="394" height="286"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -108,13 +136,13 @@
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Lx8-95-byq" firstAttribute="leading" secondItem="PpR-v3-cV9" secondAttribute="leading" id="JuG-FG-eD5"/>
-                            <constraint firstItem="PpR-v3-cV9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="Q5f-5s-wPl"/>
-                            <constraint firstItem="Lx8-95-byq" firstAttribute="trailing" secondItem="PpR-v3-cV9" secondAttribute="trailing" id="Sb4-mj-TeA"/>
-                            <constraint firstItem="PpR-v3-cV9" firstAttribute="top" secondItem="Lx8-95-byq" secondAttribute="bottom" constant="10" id="ZNj-cM-yl5"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PpR-v3-cV9" secondAttribute="bottom" constant="432" id="fmR-jl-PFW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PpR-v3-cV9" secondAttribute="trailing" constant="10" id="mcP-W7-wTq"/>
-                            <constraint firstItem="Lx8-95-byq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="sEx-oh-Ymd"/>
+                            <constraint firstItem="Lxg-nA-Qpm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="5A0-mQ-F0I"/>
+                            <constraint firstItem="PpR-v3-cV9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="E3P-TV-h4v"/>
+                            <constraint firstItem="PpR-v3-cV9" firstAttribute="top" secondItem="Lxg-nA-Qpm" secondAttribute="bottom" constant="10" id="M3t-Ug-O1L"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PpR-v3-cV9" secondAttribute="trailing" constant="10" id="o4z-di-Hzz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PpR-v3-cV9" secondAttribute="bottom" constant="385" id="p4G-84-ixR"/>
+                            <constraint firstItem="Lxg-nA-Qpm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="pVq-4G-hgP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Lxg-nA-Qpm" secondAttribute="trailing" constant="20" id="qIe-9c-FK5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -128,11 +156,12 @@
                     <connections>
                         <outlet property="entryBodyTextView" destination="PpR-v3-cV9" id="uyb-iV-RkQ"/>
                         <outlet property="entryTitleTextField" destination="Lx8-95-byq" id="fYN-ig-FTj"/>
+                        <outlet property="moodSegmentedControl" destination="BNv-Zv-00S" id="Jfc-rH-N3c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="157" y="188"/>
+            <point key="canvasLocation" x="155.07246376811597" y="187.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pTo-E4-Vfx">
