refactor again to improve encapsulation

--- a/Journal/Journal/Application/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Application/Base.lproj/Main.storyboard
@@ -68,6 +68,7 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
+                            <outlet property="dataSource" destination="NUl-r3-zMK" id="9nF-sH-TlP"/>
                             <outlet property="delegate" destination="NUl-r3-zMK" id="OV2-a1-kwn"/>
                         </connections>
                     </tableView>
