--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lGO-jN-lef">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -117,7 +117,7 @@
                                             </subviews>
                                         </stackView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wh8-Xe-CjQ">
-                                            <rect key="frame" x="25" y="31.5" width="370" height="21"/>
+                                            <rect key="frame" x="25" y="31.5" width="384" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="370" id="snH-Wi-DVI"/>
                                             </constraints>
@@ -133,6 +133,7 @@
                                         <constraint firstItem="wh8-Xe-CjQ" firstAttribute="leading" secondItem="6Kb-Sh-Vi2" secondAttribute="leadingMargin" constant="5" id="TK4-9Z-N30"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="UHC-ra-7eT" secondAttribute="trailing" constant="5" id="W4c-O8-pWg"/>
                                         <constraint firstItem="UHC-ra-7eT" firstAttribute="top" secondItem="6Kb-Sh-Vi2" secondAttribute="topMargin" id="x74-0t-XUt"/>
+                                        <constraint firstAttribute="trailing" secondItem="wh8-Xe-CjQ" secondAttribute="trailing" constant="5" id="xcK-Pw-lfv"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -155,10 +156,16 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Rdt-aa-b0A">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="8kC-hP-hxu" eventType="valueChanged" id="mjt-dJ-j2V"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wOj-pd-Nr4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1017" y="227"/>
+            <point key="canvasLocation" x="1025" y="232"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vDm-cs-UUU">
@@ -176,10 +183,10 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d6q-21-IET" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="362" y="209"/>
+            <point key="canvasLocation" x="349" y="221"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="CYv-TW-K51"/>
+        <segue reference="N3D-wR-ymG"/>
     </inferredMetricsTieBreakers>
 </document>
